fixing the horizontal scroll

--- a/src/pages/styles/AboutMe.css
+++ b/src/pages/styles/AboutMe.css
@@ -1,189 +1,12 @@
 .aboutme {
     width: 100%;
-    min-width: 100vw;
     height: 100%;
-    min-height: 100vh;
-    position: relative;
-}
-
-.aboutme__container {
-    width: inherit;
-    min-width: inherit;
-    height: inherit;
-    min-height: inherit;
-    z-index: var(--zindex-background);
-}
-
-.aboutme__background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    object-position: center;
-    object-fit: cover;
-    z-index: var(--zindex-background);
-}
-
-.aboutme__hero {
-    width: 100%;
-    height: fit-content;
-    padding: 0 7rem 0 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    z-index: var(--zindex-normal);
-}
-
-.aboutme__title {
-    width: fit-content;
-    height: fit-content;
-    margin: 0;
-    z-index: var(--zindex-normal);
-    font-size: var(--font-size-normal);
-    font-weight: var(--font-weight-bold);
-    color: var(--color-option2);
-}
-
-.aboutme__text {
-    width: fit-content;
-    height: fit-content;
-    margin-bottom: 0;
-    z-index: var(--zindex-normal);
-    font-size: var(--font-size-small);
-    font-weight: var(--font-weight-light);
-    color: var(--color-option2);
-}
-
-.aboutme__container--badges {
-    width: 100%;
-    padding: .5rem 1rem;
     position: relative;
     z-index: var(--zindex-normal);
+    background-color: var(--color-option1);
 }
 
-.aboutme__badges {
-    width: 81px;
-    height: 22px;
-    margin-right: .5rem;
-    margin-bottom: .5rem;
-    position: relative;
-    z-index: var(--zindex-normal);
-}
-
-.color-option4 {
-    color: var(--color-option4);
-}
-
-.margin-bottom {
-    margin-bottom: 2rem;
-}
-
-.invisible {
-    display: none;
-}
-
-@media (min-width: 360px) {
-    .aboutme__hero {
-        padding-right: 9rem;
-    }
-}
-
-@media (min-width: 375px) {
-    .aboutme__hero {
-        padding-right: 12rem;
-    }
-}
-
-@media (min-width: 411px) {
-    .aboutme__hero {
-        padding-left: 2.5rem;
-        padding-right: 14rem;
-    }
-
-    .aboutme__title {
-        font-size: var(--font-size-medium);
-    }
-    
-    .aboutme__text {
-        font-size: var(--font-size-regular);
-    }
-
-    .aboutme__container--badges {
-        width: 100%;
-        padding: 2.5rem 3rem;
-    }
-
-    .aboutme__badges {
-        width: 100px;
-        height: 30px;
-    }
-}
-
-@media (min-width: 411px) {
-    .aboutme__hero {
-        padding-right: 16rem;
-    }
-}
-
-@media (min-width: 600px) {
-    .aboutme__hero {
-        padding-left: 3.5rem;
-        padding-right: 18rem;
-    }
-
-    .aboutme__title {
-        font-size: var(--font-size-large);
-    }
-    
-    .aboutme__text {
-        font-size: var(--font-size-normal);
-    }
-
-    .aboutme__container--badges {
-        padding: 2.5rem 3.5rem;
-    }
-
-    .aboutme__badges {
-        width: 170px;
-        height: 45px;
-    }
-}
-
-@media (min-width: 768px) {
-    .aboutme__hero {
-        margin-top: 3.5rem;
-        padding-left: 7rem;
-        padding-right: 23rem;
-    }
-
-    .aboutme__title {
-        font-size: var(--font-size-large);
-    }
-    
-    .aboutme__text {
-        font-size: var(--font-size-normal);
-    }
-
-    .aboutme__container--badges {
-        padding: 2.5rem 7rem;
-    }
-}
-
-@media (min-width: 992px) {
-    .aboutme__hero {
-        margin-top: 3rem;
-        padding-left: 5rem;
-        padding-right: 50rem;
-    }
-
-    .aboutme__title {
-        font-size: var(--font-size-large);
-    }
-    
-    .aboutme__text {
-        font-size: var(--font-size-normal);
-    }
-
-    .aboutme__container--badges {
-        padding: 1rem 5rem;
-    }
+.card {
+    width: 85%;
+    background-color: transparent;
 }
