--- a/src/pages/styles/HomePage.css
+++ b/src/pages/styles/HomePage.css
@@ -1,9 +1,10 @@
 .homepage {
     width: 100%;
-    min-width: 100vw;
+    max-width: 100vw;
     height: 100%;
     min-height: 100vh;
     position: relative;
+    overflow: hidden;
 }
 
 .homepage__container {
